# file-sharing

./: Cargo.toml  test.txt
src/: main.rs
